# liteparse

./: Dockerfile  README.md  docker-compose.yml  docling-response.py  pyproject.toml
docling/: Dockerfile
src/fatingest/: blobstorage.py  client.py  database.py  main.py  parse.py  worker.py
src/litepipe/: blobstorage.py  chunk.py  database.py  litepipe.py  main.py  parse.py  worker.py
