[project]
name = "litepipe"
version = "0.1.0"
description = "Document ingestion pipeline services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain_text_splitters",
    "polars",
    "uvicorn",
    "filetype",
    "aioboto3",
    "botocore",
    "dotenv",
    "clevercsv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"