[project]
name = "fatingest"
version = "0.1.0"
description = "Take it all in."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars",
    "uvicorn",
    "filetype",
    "aioboto3",
    "botocore",
    "dotenv",
    "clevercsv",
    "httpx",
    "markdownify",
    "markdown",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"